--- a/doi-confirmation.html
+++ b/doi-confirmation.html
@@ -50,7 +50,11 @@
       font-size: 13px;
       color: #999;
     }
+    input, select {
+      font-size: 16px;
+    }
   </style>
+  <script src="https://unpkg.com/libphonenumber-js@1.10.24/bundle/libphonenumber-max.js"></script>
 </head>
 <body>
   <div class="container">
@@ -60,10 +64,6 @@
 
     <h1 id="headline">Confirming Your Subscription...</h1>
     <p class="status" id="status">Please wait a moment while we confirm your information.</p>
-
-    <div class="footer">
-      &copy; 2025 Wastefree — All rights reserved.
-    </div>
   </div>
 
   <script>
@@ -83,7 +83,18 @@
         errorTitle: "Confirmation Failed",
         errorStatus: "We were unable to confirm your subscription at this time. Please try again later or contact support.",
         missingTitle: "Incomplete Request",
-        missingStatus: "We couldn't process your confirmation because a required link parameter is missing."
+        missingStatus: "We couldn't process your confirmation because a required link parameter is missing.",
+        formTitle: "Please provide your address and mobile number",
+        street: "Street + No:",
+        zip: "ZIP Code:",
+        city: "City:",
+        country: "Country:",
+        prefix: "Country Prefix:",
+        phone: "Mobile Number:",
+        submit: "Submit",
+        successSubmit: "Thank you! Your information has been submitted.",
+        errorSubmit: "There was an error submitting your information. Please try again.",
+        invalidPhone: "Please enter a valid mobile number."
       },
       de: {
         initialTitle: "Bestätigung Ihrer Anmeldung...",
@@ -93,7 +104,18 @@
         errorTitle: "Bestätigung fehlgeschlagen",
         errorStatus: "Wir konnten Ihre Anmeldung derzeit nicht bestätigen. Bitte versuchen Sie es später erneut oder kontaktieren Sie uns.",
         missingTitle: "Unvollständige Anfrage",
-        missingStatus: "Die Bestätigung konnte nicht durchgeführt werden, da ein erforderlicher Linkparameter fehlt."
+        missingStatus: "Die Bestätigung konnte nicht durchgeführt werden, da ein erforderlicher Linkparameter fehlt.",
+        formTitle: "Bitte geben Sie Ihre Adresse und Mobilnummer an",
+        street: "Straße + Nr.:",
+        zip: "PLZ:",
+        city: "Ort:",
+        country: "Land:",
+        prefix: "Ländervorwahl:",
+        phone: "Mobilnummer:",
+        submit: "Absenden",
+        successSubmit: "Vielen Dank! Ihre Daten wurden übermittelt.",
+        errorSubmit: "Es gab einen Fehler beim Absenden Ihrer Daten. Bitte versuchen Sie es erneut.",
+        invalidPhone: "Bitte geben Sie eine gültige Mobilnummer ein."
       },
       fr: {
         initialTitle: "Confirmation de votre inscription...",
@@ -103,7 +125,18 @@
         errorTitle: "Échec de la confirmation",
         errorStatus: "Nous n'avons pas pu confirmer votre inscription. Veuillez réessayer plus tard ou nous contacter.",
         missingTitle: "Requête incomplète",
-        missingStatus: "Impossible de traiter votre confirmation. Il manque un paramètre dans le lien."
+        missingStatus: "Impossible de traiter votre confirmation. Il manque un paramètre dans le lien.",
+        formTitle: "Veuillez fournir votre adresse et numéro de mobile",
+        street: "Rue + No :",
+        zip: "Code postal :",
+        city: "Ville :",
+        country: "Pays :",
+        prefix: "Indicatif pays :",
+        phone: "Numéro de mobile :",
+        submit: "Soumettre",
+        successSubmit: "Merci ! Vos informations ont été soumises.",
+        errorSubmit: "Erreur lors de la soumission. Veuillez réessayer.",
+        invalidPhone: "Veuillez entrer un numéro valide."
       },
       it: {
         initialTitle: "Conferma della tua iscrizione...",
@@ -113,12 +146,22 @@
         errorTitle: "Conferma non riuscita",
         errorStatus: "Non siamo riusciti a confermare la tua iscrizione. Riprova più tardi o contattaci.",
         missingTitle: "Richiesta incompleta",
-        missingStatus: "Non è stato possibile completare la conferma. Parametro del link mancante."
+        missingStatus: "Non è stato possibile completare la conferma. Parametro del link mancante.",
+        formTitle: "Inserisci indirizzo e numero di cellulare",
+        street: "Via + numero:",
+        zip: "CAP:",
+        city: "Città:",
+        country: "Paese:",
+        prefix: "Prefisso internazionale:",
+        phone: "Numero di cellulare:",
+        submit: "Invia",
+        successSubmit: "Grazie! I tuoi dati sono stati inviati.",
+        errorSubmit: "Errore nell'invio dei dati. Riprova.",
+        invalidPhone: "Inserisci un numero valido."
       }
     };
 
     const t = translations[lang] || translations.en;
-
     headlineEl.textContent = t.initialTitle;
     statusEl.textContent = t.initialStatus;
 
@@ -142,67 +185,97 @@
       };
       document.body.appendChild(iframe);
     }
+
     function createContactForm() {
-    const formContainer = document.createElement("div");
-    formContainer.innerHTML = `
-      <h2 style="margin-top: 40px;">Provide Additional Information</h2>
-      <form id="contactForm" style="margin-top: 20px; text-align: left; max-width: 500px; margin-left: auto; margin-right: auto;">
-        <label for="address">Address:</label><br/>
-        <input type="text" id="address" name="address" required style="width: 100%; padding: 8px; margin-bottom: 10px;"/><br/>
-        
-        <label for="mobile">Mobile Number:</label><br/>
-        <input type="tel" id="mobile" name="mobile" required style="width: 100%; padding: 8px; margin-bottom: 20px;"/><br/>
-        
-        <button type="submit" style="padding: 10px 20px; background-color: #001eb3; color: white; border: none; border-radius: 5px; cursor: pointer;">
-          Submit
-        </button>
-        <p id="formStatus" style="margin-top: 15px;"></p>
-      </form>
-    `;
-    document.querySelector(".container").appendChild(formContainer);
+      const formContainer = document.createElement("div");
+      formContainer.style.marginTop = "40px";
+      formContainer.innerHTML = `
+        <h2 style="font-size: 20px; color: #333; margin-bottom: 10px;">${t.formTitle}</h2>
+        <form id="contactForm" style="max-width: 700px; margin: 0 auto; text-align: left;">
+          <div style="margin-bottom: 15px;">
+            <label style="display:block; font-size: 17px;">${t.street}</label>
+            <input type="text" id="street" required style="width: 100%; padding: 10px;"/>
+          </div>
+          <div style="margin-bottom: 15px;">
+            <label style="display:block; font-size: 17px;">${t.zip}</label>
+            <input type="text" id="zip" required style="width: 100%; padding: 10px;"/>
+          </div>
+          <div style="margin-bottom: 15px;">
+            <label style="display:block; font-size: 17px;">${t.city}</label>
+            <input type="text" id="city" required style="width: 100%; padding: 10px;"/>
+          </div>
+          <div style="margin-bottom: 15px;">
+            <label style="display:block; font-size: 17px;">${t.country}</label>
+            <input type="text" id="country" required style="width: 100%; padding: 10px;"/>
+          </div>
+          <div style="margin-bottom: 15px;">
+            <label style="display:block; font-size: 17px;">${t.prefix}</label>
+            <input type="text" id="prefix" placeholder="+1" required style="width: 100%; padding: 10px;"/>
+          </div>
+          <div style="margin-bottom: 20px;">
+            <label style="display:block; font-size: 17px;">${t.phone}</label>
+            <input type="tel" id="mobile" required style="width: 100%; padding: 10px;"/>
+          </div>
+          <button type="submit" style="padding: 12px 25px; background-color: #001eb3; color: white; border: none; border-radius: 5px; font-size: 16px;">
+            ${t.submit}
+          </button>
+          <p id="formStatus" style="margin-top: 15px;"></p>
+        </form>
+      `;
+      document.querySelector(".container").appendChild(formContainer);
 
-    document.getElementById("contactForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      const address = document.getElementById("address").value;
-      const mobile = document.getElementById("mobile").value;
+      document.getElementById("contactForm").addEventListener("submit", function (e) {
+        e.preventDefault();
+        const fullNumber = document.getElementById("prefix").value + document.getElementById("mobile").value;
+        const phone = libphonenumber.parsePhoneNumber(fullNumber);
 
-      const payload = {
-        Id: id,
-        address: address,
-        mobile: mobile
-      };
-
-      fetch("https://hooks.zapier.com/hooks/catch/6735747/2paoc9l/", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify(payload)
-      })
-      .then(response => {
-        if (response.ok) {
-          document.getElementById("formStatus").textContent = "Thank you! Your information has been submitted.";
-          document.getElementById("formStatus").style.color = "green";
-        } else {
-          throw new Error("Failed to submit");
+        const statusMsg = document.getElementById("formStatus");
+        if (!phone || !phone.isValid()) {
+          statusMsg.textContent = t.invalidPhone;
+          statusMsg.style.color = "red";
+          return;
         }
-      })
-      .catch(error => {
-        document.getElementById("formStatus").textContent = "There was an error submitting your information. Please try again.";
-        document.getElementById("formStatus").style.color = "red";
-      });
-    });
-  }
 
-  // Show form only on successful confirmation
-  if (id) {
-    const checkIframe = setInterval(() => {
-      if (headlineEl.textContent === t.successTitle) {
-        clearInterval(checkIframe);
-        createContactForm();
-      }
-    }, 500);
-  }
-</script>
+        const payload = {
+          Id: id,
+          street: document.getElementById("street").value,
+          zip: document.getElementById("zip").value,
+          city: document.getElementById("city").value,
+          country: document.getElementById("country").value,
+          prefix: document.getElementById("prefix").value,
+          mobile: phone.number
+        };
+
+        fetch("https://hooks.zapier.com/hooks/catch/6735747/2paoc9l/", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(payload)
+        }).then(res => {
+          if (res.ok) {
+            statusMsg.textContent = t.successSubmit;
+            statusMsg.style.color = "green";
+          } else {
+            throw new Error();
+          }
+        }).catch(() => {
+          statusMsg.textContent = t.errorSubmit;
+          statusMsg.style.color = "red";
+        });
+      });
+    }
+
+    if (id) {
+      const checkIframe = setInterval(() => {
+        if (headlineEl.textContent === t.successTitle) {
+          clearInterval(checkIframe);
+          createContactForm();
+        }
+      }, 500);
+    }
+  </script>
+
+  <div class="footer">
+    &copy; 2025 Wastefree — All rights reserved.
+  </div>
 </body>
 </html>
